animações com keyframes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="bg-slate-900 flex flex-col">
 
+    <div id="header" class="indicador"></div>
     <!-- Seção de Header -->
     <header class="py-12 flex flex-col items-center gap-4 text-center bg-slate-800 border-b-2 border-orange-200">
         <img class="w-60" src="img/LOGO_TRANSPARENTE_1.png" alt="">
